--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -43,3 +43,9 @@ body {
     margin: 10px;
     margin-left: 0;
 }
+
+.imagemmostrarproduto {
+    width: 800px;
+    height: 500px;
+    margin: 10px;
+}
